# cpp-17-2020-11-23

./: .gitignore  README.md
_exercise/01_structured_bindings/: structured_binding_ex.cpp
_exercise/02_constexpr_if/: CMakeLists.txt  constexprif_ex.cpp
_exercise/04_fold_expressions/: fold_ex.cpp
_exercise/05_string_view/: string_view_ex.cpp
_exercise/07_visiting_variants/: visitors_ex.cpp
_project-template/: tests.cpp
_project-template/structured_binding/: tests.cpp
any/: tests.cpp
benchmarks-algorithms/: CMakeLists.txt  benchmark_algorithms.cpp  main.cpp  tokens.txt
bugfixes/: tests.cpp
ctad/: tests.cpp
fold-expressions/: tests.cpp
ifs/: tests.cpp
lambdas/: tests.cpp
optional/: tests.cpp
small-features/: tests.cpp
string-view/: tests.cpp
structured_binding/: CMakeLists.txt  tests.cpp
variant/: tests.cpp
